@@ -1,5 +1,5 @@
 /**
- *    Copyright 2009-2019 the original author or authors.
+ *    Copyright 2009-2018 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -27,16 +27,16 @@ import org.apache.ibatis.io.Resources;
 import org.apache.ibatis.session.SqlSession;
 import org.apache.ibatis.session.SqlSessionFactory;
 import org.apache.ibatis.session.SqlSessionFactoryBuilder;
-import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.Test;
+import org.junit.Assert;
+import org.junit.BeforeClass;
+import org.junit.Test;
 
-class ValueInMapTest {
+public class ValueInMapTest {
 
   private static SqlSessionFactory sqlSessionFactory;
 
-  @BeforeAll
-  static void setUp() throws Exception {
+  @BeforeClass
+  public static void setUp() throws Exception {
     // create a SqlSessionFactory
     try (Reader reader = Resources.getResourceAsReader("org/apache/ibatis/submitted/valueinmap/mybatis-config.xml")) {
       sqlSessionFactory = new SqlSessionFactoryBuilder().build(reader);
@@ -48,23 +48,24 @@ class ValueInMapTest {
   }
 
   @Test // issue #165
-  void shouldWorkWithAPropertyNamedValue() {
+  public void shouldWorkWithAPropertyNamedValue() {
     try (SqlSession sqlSession = sqlSessionFactory.openSession()) {
-      Map<String, String> map = new HashMap<>();
+      Map<String, String> map = new HashMap<String, String>();
       map.put("table", "users");
       map.put("column", "name");
       map.put("value", "User1");
       Integer count = sqlSession.selectOne("count", map);
-      Assertions.assertEquals(Integer.valueOf(1), count);
+      Assert.assertEquals(new Integer(1), count);
     }
   }
 
-  @Test
-  void shouldWorkWithAList() {
+  @Test(expected=PersistenceException.class)
+  public void shouldWorkWithAList() {
     try (SqlSession sqlSession = sqlSessionFactory.openSession()) {
-      List<String> list = new ArrayList<>();
+      List<String> list = new ArrayList<String>();
       list.add("users");
-      Assertions.assertThrows(PersistenceException.class, () -> sqlSession.selectOne("count2",list));
+      Integer count = sqlSession.selectOne("count2",list);
+      Assert.assertEquals(new Integer(1), count);
     }
   }
 
